--- a/modules/niri/idle/dotfiles/gtklock/style.css
+++ b/modules/niri/idle/dotfiles/gtklock/style.css
@@ -1,5 +1,6 @@
+/* TODO: the lock background is low res?*/
 window {
-    background-image: url("/home/jappe/Pictures/Backgrounds/dark-abstract.jpg");
+    background-image: url("/home/jappe/Pictures/Backgrounds/adventure-time.jpg");
 }
 
 label {
